fixed so nav dont hide content behind

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -150,6 +150,10 @@ $menu-label-color: $white-ter
 
 @import "~bulma"
 
+/* OVerride Bulma sass here*/
+body
+  margin-top: 70px;
+
 
 // responsiveness
 +tablet-only
